force-app/main/default/objects/OCE__FieldCoachingEventData__c/OCE__FieldCoachingEventData__c.object-meta.xml
<CustomObject>
    <description>Evaluation data for Coaching Event.</description>
    <label>Coaching Event Data</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coaching Event Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>