force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE1__IsProductResponse__c.field-meta.xml
<CustomField>
    <fullName>OCE1__IsProductResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to detect product response records</description>
    <label>Is Product Response</label>
    <type>Checkbox</type>
</CustomField>