force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE1__IsStoreCheckQuestionResponse__c.field-meta.xml
<CustomField>
    <fullName>OCE1__IsStoreCheckQuestionResponse__c</fullName>
    <description>Identifies if the parent Form Response record is related to StoreCheck (MVP)</description>
    <formula>NOT( ISBLANK( OCE__FormResponse__r.OCE1__StoreCheck__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies if the parent Form Response record is related to StoreCheck</inlineHelpText>
    <label>Is Store Check Question Response</label>
    <type>Checkbox</type>
</CustomField>