force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE1__ProductResponse__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ProductResponse__c</fullName>
    <description>Used to store JSON response for product questions</description>
    <label>Product Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>