force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE1__ToDelete__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ToDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags the record for removal.</description>
    <inlineHelpText>Flags the record for removal.</inlineHelpText>
    <label>To Delete</label>
    <type>Checkbox</type>
</CustomField>