force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__Category__c.field-meta.xml
<CustomField>
    <fullName>OCE__Category__c</fullName>
    <description>Category of particular question.</description>
    <inlineHelpText>Category of particular question.</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>