force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__CoachScore__c.field-meta.xml
<CustomField>
    <fullName>OCE__CoachScore__c</fullName>
    <description>Score of Coach Evaluation for particular question.</description>
    <inlineHelpText>Score of Coach Evaluation for particular question.</inlineHelpText>
    <label>Coach Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>