force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__EmployeeComments__c.field-meta.xml
<CustomField>
    <fullName>OCE__EmployeeComments__c</fullName>
    <description>Comments to question which employee puts during evaluation.</description>
    <inlineHelpText>Comments to question which employee puts during evaluation.</inlineHelpText>
    <label>Employee Comments</label>
    <type>TextArea</type>
</CustomField>