force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__EmployeeCommentsLong__c.field-meta.xml
<CustomField>
    <fullName>OCE__EmployeeCommentsLong__c</fullName>
    <description>Comments to question which employee puts during evaluation. Long version</description>
    <inlineHelpText>Comments to question which employee puts during evaluation.</inlineHelpText>
    <label>Employee Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>