force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__FieldCoachingEvent__c.field-meta.xml
<CustomField>
    <fullName>OCE__FieldCoachingEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Coaching Event.</description>
    <inlineHelpText>Reference to Coaching Event.</inlineHelpText>
    <label>Field Coaching Event</label>
    <referenceTo>OCE__FieldCoachingEvent__c</referenceTo>
    <relationshipLabel>Coaching Event Data</relationshipLabel>
    <relationshipName>FieldCoachingEventData</relationshipName>
    <type>Lookup</type>
</CustomField>