force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__FormQuestion__c.field-meta.xml
<CustomField>
    <fullName>OCE__FormQuestion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Form Question for which the user response is recorded.</description>
    <inlineHelpText>Form Question for which the user response is recorded.</inlineHelpText>
    <label>Form Question</label>
    <referenceTo>OCE__FieldCoachingFormQuestion__c</referenceTo>
    <relationshipLabel>Question Responses</relationshipLabel>
    <relationshipName>FormQuestionResponse</relationshipName>
    <type>Lookup</type>
</CustomField>