force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__FormResponse__c.field-meta.xml
<CustomField>
    <fullName>OCE__FormResponse__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Form Response in which event data is part of.</description>
    <inlineHelpText>Form Response in which event data is part of.</inlineHelpText>
    <label>Form Response</label>
    <referenceTo>OCE__FormResponse__c</referenceTo>
    <relationshipLabel>Question Responses</relationshipLabel>
    <relationshipName>QuestionResponse</relationshipName>
    <type>Lookup</type>
</CustomField>