force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__IsParentProfilingQuestionResponse__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsParentProfilingQuestionResponse__c</fullName>
    <description>Identifies if the parent Form Response record was answered through the Profiling Question component.</description>
    <formula>OCE__FormResponse__r.OCE__IsProfilingQuestionResponse__c</formula>
    <inlineHelpText>Identifies if the parent Form Response record was answered through the Profiling Question component.</inlineHelpText>
    <label>Is Parent Profiling Question Response</label>
    <type>Checkbox</type>
</CustomField>