force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__IsQuestionMandatory__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsQuestionMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Holds information if question is mandatory.</description>
    <inlineHelpText>Holds information if question is mandatory.</inlineHelpText>
    <label>Is Question Mandatory</label>
    <type>Checkbox</type>
</CustomField>