force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__LongTextResponse__c.field-meta.xml
<CustomField>
    <fullName>OCE__LongTextResponse__c</fullName>
    <description>User response for free text type form questions.</description>
    <inlineHelpText>User response for free text type form questions.</inlineHelpText>
    <label>Long Text Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>