force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__ManagersComments__c.field-meta.xml
<CustomField>
    <fullName>OCE__ManagersComments__c</fullName>
    <description>Comments to question which coach puts during evaluation.</description>
    <inlineHelpText>Comments to question which coach puts during evaluation.</inlineHelpText>
    <label>Manager&apos;s comments</label>
    <type>TextArea</type>
</CustomField>