force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__ManagersCommentsLong__c.field-meta.xml
<CustomField>
    <fullName>OCE__ManagersCommentsLong__c</fullName>
    <description>Comments to question which coach puts during evaluation. Long version</description>
    <inlineHelpText>Comments to question which coach puts during evaluation.</inlineHelpText>
    <label>Manager&apos;s comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>