force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__OfflineUniqueId__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineUniqueId__c</fullName>
    <description>Offline Unique Id</description>
    <inlineHelpText>Offline Unique Id</inlineHelpText>
    <label>Offline Unique Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>