force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__Question__c.field-meta.xml
<CustomField>
    <fullName>OCE__Question__c</fullName>
    <description>Question text, which is saved to event data during Coaching Event creation.</description>
    <inlineHelpText>Question text, which is saved to event data during Coaching Event creation.</inlineHelpText>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>