force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__QuestionID__c.field-meta.xml
<CustomField>
    <fullName>OCE__QuestionID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Question object.</description>
    <label>Question ID</label>
    <referenceTo>OCE__FieldCoachingQuestion__c</referenceTo>
    <relationshipLabel>Coaching Event Data</relationshipLabel>
    <relationshipName>CoachingEventData</relationshipName>
    <type>Lookup</type>
</CustomField>