force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__Response__c.field-meta.xml
<CustomField>
    <fullName>OCE__Response__c</fullName>
    <description>User&apos;s Response for the form question.</description>
    <inlineHelpText>User&apos;s Response for the form question.</inlineHelpText>
    <label>Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>