force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__Scale__c.field-meta.xml
<CustomField>
    <fullName>OCE__Scale__c</fullName>
    <description>Scale of particular Question.</description>
    <inlineHelpText>Scale of particular Question.</inlineHelpText>
    <label>Scale</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>