force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__SelfEvaluationScore__c.field-meta.xml
<CustomField>
    <fullName>OCE__SelfEvaluationScore__c</fullName>
    <description>Score of Employee Evaluation for particular question.</description>
    <inlineHelpText>Score of Employee Evaluation for particular question.</inlineHelpText>
    <label>Self Evaluation Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>