force-app/main/default/objects/OCE__FieldCoachingEventData__c/fields/OCE__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>OCE__SortOrder__c</fullName>
    <description>Sorting order of particular Question in category.</description>
    <inlineHelpText>Sorting order of particular Question in category.</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>